# aliyun-tech-solution

./: .gitignore  CLAUDE.md  README.md  aliyun.py  main.py  pyproject.toml
aliyun/: crawl-method.md  crawler.py  organize_files.py  process_images.py  product.js  products_database.json  rename_files.py  task.md  task_product.md
aliyun-product/: README.md  check_progress.sh  clean_duplicate_images.py  crawler.py  duplicate_images_report.json  product_crawler.py  product_crawler_v2.py  products_list.json
aliyun-product/products_v2/: crawl_metadata.json
arch-solutions/: metadata.json  solution_list.json
arch-solutions/organized/: metadata.json
arch-solutions/raw/: 001-创意加速器：AI_绘画创作.md  002-在聊天系统中增加一个_AI_助手.md  008-多模态数据信息提取.md  011-一键创作_AI_有声绘本.md  013-高效搭建_AI_智能体与工作流应用.md  017-在网站上增加一个_AI_助手.md  023-Qwen3_升级版，0元即刻上手.md  024-即刻拥有_DeepSeek-R1_满血版或蒸馏版.md  025-阿里云百炼专属版_AI_Stack_一体机.md  026-快速上手_DeepSeek-V3.2.md  028-Kimi_K2，开源万亿参数大模型.md  030-模型蒸馏：让0.6B模型媲美235B模型.md  031-零代码微调，打造领域专属大模型.md  033-轻松部署，即刻触达_Qwen2.5.md  034-快速拥有专属_Clawdbot，7x24_小时持续工作.md  035-从单帧到叙事，开启_AI_视觉创作.md  037-向量检索与通义千问搭建专属问答服务.md  039-n8n+百炼：自动获取AI热点资讯.md  042-与_AI_智能体进行实时音视频通话.md  (+76 more)
huaweicould-product/: check_progress.sh  crawler.py  task.md
huaweicould-solutions/: crawler.py  industry_links.json  metadata.json  solution_links.json  solution_links_full.json  task.md  technical_links.json
tencent-product/: clean_duplicate_images.py  duplicate_images_report.json  duplicate_images_report_solutions.json  image_reviewer.py  task.md  tencent_product_crawler.py  tencent_solution_crawler.py
(+1430 files in other folders)
